Updating regexes to filter out hiring notices

--- a/bot.yml
+++ b/bot.yml
@@ -10,6 +10,7 @@ tasks:
     regexp:
       reject:
         - \w+ \(YC \w+\) is hiring
+        - \w+ \(YC \w+\) hiring
     if:
       - url == comments:
           set:
