--- a/bot.yml
+++ b/bot.yml
@@ -9,7 +9,7 @@ tasks:
     accept_all: yes
     regexp:
       reject:
-        - \w+ \(YC \w+\)(?:\sis)? hiring
+        - "\\w+ \\((?:YC\\s)?[A-Z][0-9]{2}\\)(?: is)? hiring"
     if:
       - url == comments:
           set:
