--- a/podcasts.yml
+++ b/podcasts.yml
@@ -7,7 +7,7 @@ tasks:
     set:
       podcast_string: "irc.DakDak.#podcasts *New Release: Answer Me This ─ {{ title }} ─ {{ url }}"
     exec: echo "{{ podcast_string }}" > /home/creadak/.weechat/weechat_fifo
-    
+
   blindboy:
     rss:
       url: https://rss.acast.com/blindboy
@@ -25,7 +25,7 @@ tasks:
     set:
       podcast_string: "irc.DakDak.#podcasts *New Release: How Did This Get Made ─ {{ title }} ─ {{ url }}"
     exec: echo "{{ podcast_string }}" > /home/creadak/.weechat/weechat_fifo
-        
+
   my_dad_wrote_a_porno:
     rss:
       url: http://rss.acast.com/mydadwroteaporno
@@ -53,6 +53,15 @@ tasks:
       podcast_string: "irc.DakDak.#podcasts *New Release: Reply All ─ {{ title }} ─ {{ url }}"
     exec: echo "{{ podcast_string }}" > /home/creadak/.weechat/weechat_fifo
 
+  request_for_commits:
+    rss:
+      url: https://changelog.com/rfc/feed
+      all_entries: no
+    accept_all: yes
+    set:
+      podcast_string: "irc.DakDak.#podcasts *New Release: Request For Commits ─ {{ title }} ─ {{ url }}"
+    exec: echo "{{ podcast_string }}" > /home/creadak/.weechat/weechat_fifo
+
   soft_eng_daily:
     rss:
       url: http://softwareengineeringdaily.com/feed/podcast/
@@ -70,7 +79,7 @@ tasks:
     set:
       podcast_string: "irc.DakDak.#podcasts *New Release: Song Exploder ─ {{ title }} ─ {{ url }}"
     exec: echo "{{ podcast_string }}" > /home/creadak/.weechat/weechat_fifo
-    
+
   the_bugle:
     rss:
       url: http://feeds.feedburner.com/thebuglefeed/
