--- a/hacker_news.yml
+++ b/hacker_news.yml
@@ -20,4 +20,4 @@ tasks:
     exec:
       allow_background: yes
       on_output:
-        for_accepted: echo 'irc.redbrick.#hackernews *{{ news_string }}' > /home/creadak/.dakdak/weechat_fifo &
+        for_accepted: echo 'irc.DakDak.#hackernews *{{ news_string }}' > /home/creadak/.weechat/weechat_fifo &
