--- a/podcasts.yml
+++ b/podcasts.yml
@@ -17,6 +17,15 @@ tasks:
       podcast_string: "irc.DakDak.#podcasts *Answer Me This ─ {{ title }} [ {{ url }} ]"
     exec: echo "{{ podcast_string }}" > /home/creadak/.weechat/weechat_fifo
 
+  criminal:
+    rss:
+      url: http://feeds.thisiscriminal.com/CriminalShow
+      all_entries: no
+    accept_all: yes
+    set:
+      podcast_string: "irc.DakDak.#podcasts *Criminal ─ {{ title }} [ {{ url }} ]"
+    exec: echo "{{ podcast_string }}" > /home/creadak/.weechat/weechat_fifo
+
   how_did_this_get_made:
     rss:
       url: http://rss.earwolf.com/how-did-this-get-made
