--- a/podcasts.yml
+++ b/podcasts.yml
@@ -44,6 +44,15 @@ tasks:
       podcast_string: "irc.DakDak.#podcasts *How Did This Get Made ─ {{ title }} [ {{ url }} ]"
     exec: echo "{{ podcast_string }}" > /home/creadak/.weechat/weechat_fifo
 
+  lore:
+    rss:
+      url: http://lorepodcast.libsyn.com/rss
+      all_entries: no
+    accept_all: yes
+    set:
+      podcast_string: "irc.DakDak.#podcasts *Lore ─ {{ title }} [ {{ url }} ]"
+    exec: echo "{{ podcast_string }}" > /home/creadak/.weechat/weechat_fifo
+
   my_dad_wrote_a_porno:
     rss:
       url: http://rss.acast.com/mydadwroteaporno
