--- a/podcasts.yml
+++ b/podcasts.yml
@@ -116,6 +116,15 @@ tasks:
       podcast_string: "irc.DakDak.#podcasts *Request For Commits ─ {{ title }} [ {{ url }} ]"
     exec: echo "{{ podcast_string }}" > /home/creadak/.weechat/weechat_fifo
 
+  robot_or_not:
+    rss:
+      url: http://feeds.theincomparable.com/robot
+      all_entries: no
+    accept_all: yes
+    set:
+      podcast_string: "irc.DakDak.#podcasts *Robot Or Not ─ {{ title }} [ {{ url }} ]"
+    exec: echo "{{ podcast_string }}" > /home/creadak/.weechat/weechat_fifo
+
   software_engineering_daily:
     rss:
       url: http://softwareengineeringdaily.com/feed/podcast/
