--- a/podcasts.yml
+++ b/podcasts.yml
@@ -125,6 +125,15 @@ tasks:
       podcast_string: "irc.DakDak.#podcasts *Robot Or Not ─ {{ title }} [ {{ url }} ]"
     exec: echo "{{ podcast_string }}" > /home/creadak/.weechat/weechat_fifo
 
+  sawbones:
+    rss:
+      url: http://sawbones.libsyn.com/rss
+      all_entries: no
+    accept_all: yes
+    set:
+      podcast_string: "irc.DakDak.#podcasts *Sawbones ─ {{ title }} [ {{ url }} ]"
+    exec: echo "{{ podcast_string }}" > /home/creadak/.weechat/weechat_fifo
+
   software_engineering_daily:
     rss:
       url: http://softwareengineeringdaily.com/feed/podcast/
