--- a/podcasts.yml
+++ b/podcasts.yml
@@ -134,6 +134,15 @@ tasks:
       podcast_string: "irc.DakDak.#podcasts *Sawbones ─ {{ title }} [ {{ url }} ]"
     exec: echo "{{ podcast_string }}" > /home/creadak/.weechat/weechat_fifo
 
+  serial:
+    rss:
+      url: http://feeds.serialpodcast.org/serialpodcast
+      all_entries: no
+    accept_all: yes
+    set:
+      podcast_string: "irc.DakDak.#podcasts *Serial ─ {{ title }} [ {{ url }} ]"
+    exec: echo "{{ podcast_string }}" > /home/creadak/.weechat/weechat_fifo
+
   software_engineering_daily:
     rss:
       url: http://softwareengineeringdaily.com/feed/podcast/
