--- a/podcasts.yml
+++ b/podcasts.yml
@@ -152,6 +152,15 @@ tasks:
       podcast_string: "irc.DakDak.#podcasts *Shmanners ─ {{ title }} [ {{ url }} ]"
     exec: echo "{{ podcast_string }}" > /home/creadak/.weechat/weechat_fifo
 
+  showcase_from_radiotopia:
+    rss:
+      url: http://feeds.radiotopia.fm/radiotopia-showcase
+      all_entries: no
+    accept_all: yes
+    set:
+      podcast_string: "irc.DakDak.#podcasts *Showcase From Radiotopia ─ {{ title }} [ {{ url }} ]"
+    exec: echo "{{ podcast_string }}" > /home/creadak/.weechat/weechat_fifo
+
   software_engineering_daily:
     rss:
       url: http://softwareengineeringdaily.com/feed/podcast/
