--- a/podcasts.yml
+++ b/podcasts.yml
@@ -179,6 +179,15 @@ tasks:
       podcast_string: "irc.DakDak.#podcasts *Song Exploder ─ {{ title }} [ {{ url }} ]"
     exec: echo "{{ podcast_string }}" > /home/creadak/.weechat/weechat_fifo
 
+  the_adventure_zone:
+    rss:
+      url: http://adventurezone.libsyn.com/rss
+      all_entries: no
+    accept_all: yes
+    set:
+      podcast_string: "irc.DakDak.#podcasts *The Adventure Zone ─ {{ title }} [ {{ url }} ]"
+    exec: echo "{{ podcast_string }}" > /home/creadak/.weechat/weechat_fifo
+
   the_blindboy_podcast:
     rss:
       url: https://rss.acast.com/blindboy
