--- a/podcasts.yml
+++ b/podcasts.yml
@@ -188,6 +188,15 @@ tasks:
       podcast_string: "irc.DakDak.#podcasts *The Adventure Zone ─ {{ title }} [ {{ url }} ]"
     exec: echo "{{ podcast_string }}" > /home/creadak/.weechat/weechat_fifo
 
+  the_allusionist:
+    rss:
+      url: http://feeds.theallusionist.org/Allusionist
+      all_entries: no
+    accept_all: yes
+    set:
+      podcast_string: "irc.DakDak.#podcasts *The Allusionist ─ {{ title }} [ {{ url }} ]"
+    exec: echo "{{ podcast_string }}" > /home/creadak/.weechat/weechat_fifo
+
   the_blindboy_podcast:
     rss:
       url: https://rss.acast.com/blindboy
