--- a/podcasts.yml
+++ b/podcasts.yml
@@ -223,3 +223,12 @@ tasks:
     set:
       podcast_string: "irc.DakDak.#podcasts *The Bugle ─ {{ title }} [ {{ url }} ]"
     exec: echo "{{ podcast_string }}" > /home/creadak/.weechat/weechat_fifo
+
+  the_curious_cases_of_rutherford_and_fry:
+    rss:
+      url: https://podcasts.files.bbci.co.uk/b07dx75g.rss
+      all_entries: no
+    accept_all: yes
+    set:
+      podcast_string: "irc.DakDak.#podcasts *The Curious Cases of Rutherford And Fry ─ {{ title }} [ {{ url }} ]"
+    exec: echo "{{ podcast_string }}" > /home/creadak/.weechat/weechat_fifo
