--- a/podcasts.yml
+++ b/podcasts.yml
@@ -232,3 +232,12 @@ tasks:
     set:
       podcast_string: "irc.DakDak.#podcasts *The Curious Cases of Rutherford And Fry ─ {{ title }} [ {{ url }} ]"
     exec: echo "{{ podcast_string }}" > /home/creadak/.weechat/weechat_fifo
+
+  the_modern_mann:
+    rss:
+      url: http://rss.acast.com/themodernmann
+      all_entries: no
+    accept_all: yes
+    set:
+      podcast_string: "irc.DakDak.#podcasts *The Modern Mann ─ {{ title }} [ {{ url }} ]"
+    exec: echo "{{ podcast_string }}" > /home/creadak/.weechat/weechat_fifo
