--- a/podcasts.yml
+++ b/podcasts.yml
@@ -259,3 +259,12 @@ tasks:
     set:
       podcast_string: "irc.DakDak.#podcasts *The Skeptics Guide to the Universe ─ {{ title }} [ {{ url }} ]"
     exec: echo "{{ podcast_string }}" > /home/creadak/.weechat/weechat_fifo
+
+  the_truth:
+    rss:
+      url: http://feeds.thetruthpodcast.com/thetruthapm
+      all_entries: no
+    accept_all: yes
+    set:
+      podcast_string: "irc.DakDak.#podcasts *The Truth ─ {{ title }} [ {{ url }} ]"
+    exec: echo "{{ podcast_string }}" > /home/creadak/.weechat/weechat_fifo
