--- a/podcasts.yml
+++ b/podcasts.yml
@@ -268,3 +268,12 @@ tasks:
     set:
       podcast_string: "irc.DakDak.#podcasts *The Truth ─ {{ title }} [ {{ url }} ]"
     exec: echo "{{ podcast_string }}" > /home/creadak/.weechat/weechat_fifo
+
+  the_west_wing_weekly:
+    rss:
+      url: http://feeds.feedburner.com/westwingweekly
+      all_entries: no
+    accept_all: yes
+    set:
+      podcast_string: "irc.DakDak.#podcasts *The West Wing Weekly ─ {{ title }} [ {{ url }} ]"
+    exec: echo "{{ podcast_string }}" > /home/creadak/.weechat/weechat_fifo
