--- a/podcasts.yml
+++ b/podcasts.yml
@@ -277,3 +277,12 @@ tasks:
     set:
       podcast_string: "irc.DakDak.#podcasts *The West Wing Weekly ─ {{ title }} [ {{ url }} ]"
     exec: echo "{{ podcast_string }}" > /home/creadak/.weechat/weechat_fifo
+
+  this_is_love:
+    rss:
+      url: http://feeds.thisiscriminal.com/thisislovepodcast
+      all_entries: no
+    accept_all: yes
+    set:
+      podcast_string: "irc.DakDak.#podcasts *This Is Love ─ {{ title }} [ {{ url }} ]"
+    exec: echo "{{ podcast_string }}" > /home/creadak/.weechat/weechat_fifo
