--- a/podcasts.yml
+++ b/podcasts.yml
@@ -304,3 +304,12 @@ tasks:
     set:
       podcast_string: "irc.DakDak.#podcasts *Welcome To Night Vale ─ {{ title }} [ {{ url }} ]"
     exec: echo "{{ podcast_string }}" > /home/creadak/.weechat/weechat_fifo
+
+  what_trump_can_teach_us_about_con_law:
+    rss:
+      url: http://feeds.trumpconlaw.com/trumpconlaw
+      all_entries: no
+    accept_all: yes
+    set:
+      podcast_string: "irc.DakDak.#podcasts *What Trump Can Teach Us About Con Law ─ {{ title }} [ {{ url }} ]"
+    exec: echo "{{ podcast_string }}" > /home/creadak/.weechat/weechat_fifo
