--- a/podcasts.yml
+++ b/podcasts.yml
@@ -224,6 +224,15 @@ tasks:
       podcast_string: "irc.DakDak.#podcasts *The Bugle ─ {{ title }} [ {{ url }} ]"
     exec: echo "{{ podcast_string }}" > /home/creadak/.weechat/weechat_fifo
 
+  the_changelog:
+    rss:
+      url: https://changelog.com/podcast/feed
+      all_entries: no
+    accept_all: yes
+    set:
+      podcast_string: "irc.DakDak.#podcasts *The Changelog ─ {{ title }} [ {{ url }} ]"
+    exec: echo "{{ podcast_string }}" > /home/creadak/.weechat/weechat_fifo
+
   the_curious_cases_of_rutherford_and_fry:
     rss:
       url: https://podcasts.files.bbci.co.uk/b07dx75g.rss
