--- a/podcasts.yml
+++ b/podcasts.yml
@@ -5,233 +5,271 @@ templates:
     exec:
       auto_escape: yes
       on_output:
-        for_accepted: echo irc.DakDak.#podcasts *"{{ podcast_name }} ─ {{ title }} [ {{ url }} ]" > /home/creadak/.weechat/weechat_fifo
+        for_accepted: 'echo irc.DakDak.#podcasts *"{{ podcast_name }} ─ [ {{ pcast_url }} ]: {{ title }} [ {{ url }} ]" > /home/creadak/.weechat/weechat_fifo'
 
 tasks:
   99_percent_invisible:
     rss: http://feeds.99percentinvisible.org/99percentinvisible
     set:
       podcast_name: "99% Invisible"
+      pcast_url: http://pca.st/99invisible
     template: podcast
 
   answer_me_this:
     rss: https://answermethis.libsyn.com/rss/
     set:
       podcast_name: "Answer Me This"
+      pcast_url: http://pca.st/answermethis
     template: podcast
 
   command_line_heroes:
     rss: https://feeds.pacific-content.com/commandlineheroes
     set:
       podcast_name: "Command Line Heroes"
+      pcast_url: http://pca.st/zeLn
     template: podcast
 
   criminal:
     rss: http://feeds.thisiscriminal.com/CriminalShow
     set:
       podcast_name: "Criminal"
+      pcast_url: http://pca.st/criminal
     template: podcast
 
   darknet_diaries:
     rss: https://darknetdiaries.com/podcast.xml
     set:
       podcast_name: "Darknet Diaries"
+      pcast_url: http://pca.st/OJYc
     template: podcast
 
   ear_hustle:
     rss: http://feeds.earhustlesq.com/earhustlesq
     set:
       podcast_name: "Ear Hustle"
+      pcast_url: http://pca.st/5Som
     template: podcast
 
   how_did_this_get_made:
     rss: http://rss.earwolf.com/how-did-this-get-made
     set:
       podcast_name: "How Did This Get Made"
+      pcast_url: http://pca.st/hdtgm
     template: podcast
 
   lore:
     rss: http://lorepodcast.libsyn.com/rss
     set:
       podcast_name: "Lore"
+      pcast_url: http://pca.st/lore
     template: podcast
 
   mission_to_zyxx:
     rss: https://audioboom.com/channels/4921284.rss
     set:
       podcast_name: "Mission To Zyxx"
+      pcast_url: http://pca.st/iHi8
     template: podcast
 
   more_or_less:
     rss: https://podcasts.files.bbci.co.uk/p02nrss1.rss
     set:
       podcast_name: "More Or Less"
+      pcast_url: http://pca.st/moreorless
     template: podcast
 
   my_brother_my_brother_and_me:
     rss: http://mbmbam.libsyn.com/rss
     set:
       podcast_name: "My Brother My Brother And Me"
+      pcast_url: http://pca.st/mybrother
     template: podcast
 
   my_dad_wrote_a_porno:
     rss: http://rss.acast.com/mydadwroteaporno
     set:
       podcast_name: "My Dad Wrote A Porno"
+      pcast_url: http://pca.st/mydad
     template: podcast
 
   no_such_thing_as_a_fish:
     rss: https://audioboom.com/channels/2399216.rss
     set:
       podcast_name: "No Such Thing As A Fish"
+      pcast_url: http://pca.st/nosuchthing
     template: podcast
 
   reply_all:
     rss: http://feeds.gimletmedia.com/hearreplyall
     set:
       podcast_name: "Reply All"
+      pcast_url: http://pca.st/replyall
     template: podcast
 
   request_for_commits:
     rss: https://changelog.com/rfc/feed
     set:
       podcast_name: "Request For Commits"
+      pcast_url: http://pca.st/rfc
     template: podcast
 
   robot_or_not:
     rss: http://feeds.theincomparable.com/robot
     set:
       podcast_name: "Robot Or Not"
+      pcast_url: http://pca.st/robot
     template: podcast
 
   sawbones:
     rss: http://sawbones.libsyn.com/rss
     set:
       podcast_name: "Sawbones"
+      pcast_url: http://pca.st/sawbones
     template: podcast
 
   serial:
     rss: http://feeds.serialpodcast.org/serialpodcast
     set:
       podcast_name: "Serial"
+      pcast_url: http://pca.st/serial
     template: podcast
 
   shmanners:
     rss: http://shmanners.libsyn.com/rss
     set:
       podcast_name: "Shmanners"
+      pcast_url: http://pca.st/shmanners
     template: podcast
 
   showcase_from_radiotopia:
     rss: http://feeds.radiotopia.fm/radiotopia-showcase
     set:
       podcast_name: "Showcase From Radiotopia"
+      pcast_url: http://pca.st/s1Rs
     template: podcast
 
   software_engineering_daily:
     rss: http://softwareengineeringdaily.com/feed/podcast
     set:
       podcast_name: "Software Engineering Daily"
+      pcast_url: http://pca.st/sed
     template: podcast
 
   song_exploder:
     rss: http://feed.songexploder.net/SongExploder
     set:
       podcast_name: "Song Exploder"
+      pcast_url: http://pca.st/songexploder
     template: podcast
 
   the_adventure_zone:
     rss: http://adventurezone.libsyn.com/rss
     set:
       podcast_name: "The Adventure Zone"
+      pcast_url: http://pca.st/adventurezone
     template: podcast
 
   the_allusionist:
     rss: http://feeds.theallusionist.org/Allusionist
     set:
       podcast_name: "The Allusionist"
+      pcast_url: http://pca.st/allusionist
     template: podcast
 
   the_blindboy_podcast:
     rss: https://rss.acast.com/blindboy
     set:
       podcast_name: "The Blindboy Podcast"
+      pcast_url: http://pca.st/tP9E
     template: podcast
 
   the_boring_talks:
     rss: https://podcasts.files.bbci.co.uk/p05t3gr2.rss
     set:
       podcast_name: "The Boring Talks"
+      pcast_url: http://pca.st/boringtalks
     template: podcast
 
   the_bugle:
     rss: http://feeds.feedburner.com/thebuglefeed
     set:
       podcast_name: "The Bugle"
+      pcast_url: http://pca.st/bugle
     template: podcast
 
   the_changelog:
     rss: https://changelog.com/podcast/feed
     set:
       podcast_name: "The Changelog"
+      pcast_url: http://pca.st/changelog
     template: podcast
 
   the_curious_cases_of_ruterford_and_fry:
     rss: https://podcasts.files.bbci.co.uk/b07dx75g.rss
     set:
       podcast_name: "The Curious Cases of Rutherford And Fry"
+      pcast_url: http://pca.st/vT1k
     template: podcast
 
   the_modern_mann:
     rss: http://rss.acast.com/themodernmann
     set:
       podcast_name: "The Mordern Mann"
+      pcast_url: http://pca.st/mann
     template: podcast
 
   the_mortified_podcast:
     rss: http://feeds.getmortified.com/MortifiedPod
     set:
       podcast_name: "The Mortified Podcast"
+      pcast_url: http://pca.st/mortified
     template: podcast
 
   the_skeptics_guide_to_the_universe:
     rss: https://feed.theskepticsguide.org/feed/rss.aspx?feed=sgu
     set:
       podcast_name: "The Skeptics Guide to the Universe"
+      pcast_url: http://pca.st/skepticsguide
     template: podcast
 
   the_truth:
     rss: http://feeds.thetruthpodcast.com/thetruthapm
     set:
       podcast_name: "The Truth"
+      pcast_url: http://pca.st/thetruth
     template: podcast
 
   the_west_wing_weekly:
     rss: http://feeds.feedburner.com/westwingweekly
     set:
       podcast_name: "The West Wing Weekly"
+      pcast_url: http://pca.st/www
     template: podcast
 
   this_is_love:
     rss: http://feeds.thisiscriminal.com/thisislovepodcast
     set:
       podcast_name: "This Is Love"
+      pcast_url: http://pca.st/thisislove
     template: podcast
 
   twenty_thousand_hertz:
     rss: http://feeds.megaphone.fm/20k
     set:
       podcast_name: "Twenty Thousand Hertz"
+      pcast_url: http://pca.st/20khz
     template: podcast
 
   welcome_to_night_vale:
     rss: http://feeds.nightvalepresents.com/welcometonightvalepodcast
     set:
       podcast_name: "Welcome To Night Vale"
+      pcast_url: http://pca.st/nightvale
     template: podcast
 
   what_trump_can_teach_us_about_con_law:
     rss: http://feeds.trumpconlaw.com/trumpconlaw
     set:
       podcast_name: "What Trump Can Teach Us About Con Law"
+      pcast_url: http://pca.st/nb5c
     template: podcast
